Don't include Xcode user files in git

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-SkyCheckers.xcodeproj/xcuserdata
-SkyCheckers.xcodeproj/project.xcworkspace/xcuserdata
+mac/SkyCheckers.xcodeproj/xcuserdata
+mac/SkyCheckers.xcodeproj/project.xcworkspace/xcuserdata
 .DS_Store
 skycheckers
 win/Debug
