Add renderer.c to visual studio project

--- a/win/SkyCheckers.vcxproj
+++ b/win/SkyCheckers.vcxproj
@@ -24,6 +24,7 @@
     <ClInclude Include="..\src\math_3d.h" />
     <ClInclude Include="..\src\menu.h" />
     <ClInclude Include="..\src\network.h" />
+    <ClInclude Include="..\src\renderer.h" />
     <ClInclude Include="..\src\scenery.h" />
     <ClInclude Include="..\src\utilities.h" />
     <ClInclude Include="..\src\weapon.h" />
@@ -43,6 +44,7 @@
     <ClCompile Include="..\src\main.c" />
     <ClCompile Include="..\src\menu.c" />
     <ClCompile Include="..\src\network.c" />
+    <ClCompile Include="..\src\renderer.c" />
     <ClCompile Include="..\src\scenery.c" />
     <ClCompile Include="..\src\utilities.c" />
     <ClCompile Include="..\src\weapon.c" />
