--- a/win/SkyCheckers.vcxproj.filters
+++ b/win/SkyCheckers.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="..\src\math_3d.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\renderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\ai.c">
@@ -117,6 +120,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\src\characters.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\renderer.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
