--- a/win/SkyCheckers.vcxproj
+++ b/win/SkyCheckers.vcxproj
@@ -86,12 +86,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(ProjectDir)SDL2-2.0.9\include;$(ProjectDir)SDL2_ttf-2.0.14\include;$(ProjectDir)SDL2_mixer-2.0.4\include;$(ProjectDir)SDL2_image-2.0.4\include;$(ProjectDir);$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)SDL2-2.0.9\lib\x86;$(ProjectDir)SDL2_ttf-2.0.14\lib\x86;$(ProjectDir)SDL2_mixer-2.0.4\lib\x86;$(ProjectDir)SDL2_image-2.0.4\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)glew-2.1.0\include;$(ProjectDir)SDL2-2.0.9\include;$(ProjectDir)SDL2_ttf-2.0.14\include;$(ProjectDir)SDL2_mixer-2.0.4\include;$(ProjectDir)SDL2_image-2.0.4\include;$(ProjectDir);$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)glew-2.1.0\lib\Release\Win32;$(ProjectDir)SDL2-2.0.9\lib\x86;$(ProjectDir)SDL2_ttf-2.0.14\lib\x86;$(ProjectDir)SDL2_mixer-2.0.4\lib\x86;$(ProjectDir)SDL2_image-2.0.4\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(ProjectDir)SDL2-2.0.9\include;$(ProjectDir)SDL2_ttf-2.0.14\include;$(ProjectDir)SDL2_mixer-2.0.4\include;$(ProjectDir)SDL2_image-2.0.4\include;$(ProjectDir);$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)SDL2-2.0.9\lib\x86;$(ProjectDir)SDL2_ttf-2.0.14\lib\x86;$(ProjectDir)SDL2_mixer-2.0.4\lib\x86;$(ProjectDir)SDL2_image-2.0.4\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)glew-2.1.0\include;$(ProjectDir)SDL2-2.0.9\include;$(ProjectDir)SDL2_ttf-2.0.14\include;$(ProjectDir)SDL2_mixer-2.0.4\include;$(ProjectDir)SDL2_image-2.0.4\include;$(ProjectDir);$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)glew-2.1.0\lib\Release\Win32;$(ProjectDir)SDL2-2.0.9\lib\x86;$(ProjectDir)SDL2_ttf-2.0.14\lib\x86;$(ProjectDir)SDL2_mixer-2.0.4\lib\x86;$(ProjectDir)SDL2_image-2.0.4\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -103,11 +103,13 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>opengl32.lib;SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;ws2_32.lib;Shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glew32.lib;opengl32.lib;SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;ws2_32.lib;Shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /y /d "$(ProjectDir)SDL2-2.0.9\lib\x86\SDL2.dll" "$(OutDir)"
+      <Command>xcopy /y /d "$(ProjectDir)glew-2.1.0\bin\Release\Win32\glew32.dll" "$(OutDir)"
+xcopy /y /d "$(ProjectDir)glew-2.1.0\LICENSE.glew.txt" "$(OutDir)"
+xcopy /y /d "$(ProjectDir)SDL2-2.0.9\lib\x86\SDL2.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)SDL2_mixer-2.0.4\lib\x86\SDL2_mixer.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)SDL2_mixer-2.0.4\lib\x86\libogg-0.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)SDL2_mixer-2.0.4\lib\x86\libvorbis-0.dll" "$(OutDir)"
@@ -118,8 +120,7 @@ xcopy /y /d "$(ProjectDir)SDL2_ttf-2.0.14\lib\x86\libfreetype-6.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)SDL2_ttf-2.0.14\lib\x86\LICENSE.freetype.txt" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)SDL2_image-2.0.4\lib\x86\SDL2_image.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)SDL2_image-2.0.4\lib\x86\zlib1.dll" "$(OutDir)"
-xcopy /y /d "$(ProjectDir)SDL2_image-2.0.4\lib\x86\LICENSE.zlib.txt" "$(OutDir)"
-</Command>
+xcopy /y /d "$(ProjectDir)SDL2_image-2.0.4\lib\x86\LICENSE.zlib.txt" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -136,11 +137,13 @@ xcopy /y /d "$(ProjectDir)SDL2_image-2.0.4\lib\x86\LICENSE.zlib.txt" "$(OutDir)"
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>opengl32.lib;SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;ws2_32.lib;Shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glew32.lib;opengl32.lib;SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;ws2_32.lib;Shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /y /d "$(ProjectDir)SDL2-2.0.9\lib\x86\SDL2.dll" "$(OutDir)"
+      <Command>xcopy /y /d "$(ProjectDir)glew-2.1.0\bin\Release\Win32\glew32.dll" "$(OutDir)"
+xcopy /y /d "$(ProjectDir)glew-2.1.0\LICENSE.glew.txt" "$(OutDir)"
+xcopy /y /d "$(ProjectDir)SDL2-2.0.9\lib\x86\SDL2.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)SDL2_mixer-2.0.4\lib\x86\SDL2_mixer.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)SDL2_mixer-2.0.4\lib\x86\libogg-0.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)SDL2_mixer-2.0.4\lib\x86\libvorbis-0.dll" "$(OutDir)"
@@ -151,8 +154,7 @@ xcopy /y /d "$(ProjectDir)SDL2_ttf-2.0.14\lib\x86\libfreetype-6.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)SDL2_ttf-2.0.14\lib\x86\LICENSE.freetype.txt" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)SDL2_image-2.0.4\lib\x86\SDL2_image.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)SDL2_image-2.0.4\lib\x86\zlib1.dll" "$(OutDir)"
-xcopy /y /d "$(ProjectDir)SDL2_image-2.0.4\lib\x86\LICENSE.zlib.txt" "$(OutDir)"
-</Command>
+xcopy /y /d "$(ProjectDir)SDL2_image-2.0.4\lib\x86\LICENSE.zlib.txt" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
