--- a/win/SkyCheckers.vcxproj
+++ b/win/SkyCheckers.vcxproj
@@ -26,6 +26,7 @@
     <ClInclude Include="..\src\network.h" />
     <ClInclude Include="..\src\renderer.h" />
     <ClInclude Include="..\src\renderer_gl.h" />
+    <ClInclude Include="..\src\renderer_projection.h" />
     <ClInclude Include="..\src\scenery.h" />
     <ClInclude Include="..\src\utilities.h" />
     <ClInclude Include="..\src\weapon.h" />
@@ -47,6 +48,7 @@
     <ClCompile Include="..\src\network.c" />
     <ClCompile Include="..\src\renderer.c" />
     <ClCompile Include="..\src\renderer_gl.c" />
+    <ClCompile Include="..\src\renderer_projection.c" />
     <ClCompile Include="..\src\scenery.c" />
     <ClCompile Include="..\src\utilities.c" />
     <ClCompile Include="..\src\weapon.c" />
@@ -88,12 +90,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(ProjectDir)glew-2.1.0\include;$(ProjectDir)SDL2-2.0.9\include;$(ProjectDir)SDL2_ttf-2.0.14\include;$(ProjectDir)SDL2_mixer-2.0.4\include;$(ProjectDir)SDL2_image-2.0.4\include;$(ProjectDir);$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)glew-2.1.0\lib\Release\Win32;$(ProjectDir)SDL2-2.0.9\lib\x86;$(ProjectDir)SDL2_ttf-2.0.14\lib\x86;$(ProjectDir)SDL2_mixer-2.0.4\lib\x86;$(ProjectDir)SDL2_image-2.0.4\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)glew-2.1.0\include;$(ProjectDir)SDL2-2.0.9\include;$(ProjectDir)SDL2_ttf-2.0.14\include;$(ProjectDir)SDL2_mixer-2.0.4\include;$(ProjectDir);$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)glew-2.1.0\lib\Release\Win32;$(ProjectDir)SDL2-2.0.9\lib\x86;$(ProjectDir)SDL2_ttf-2.0.14\lib\x86;$(ProjectDir)SDL2_mixer-2.0.4\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(ProjectDir)glew-2.1.0\include;$(ProjectDir)SDL2-2.0.9\include;$(ProjectDir)SDL2_ttf-2.0.14\include;$(ProjectDir)SDL2_mixer-2.0.4\include;$(ProjectDir)SDL2_image-2.0.4\include;$(ProjectDir);$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)glew-2.1.0\lib\Release\Win32;$(ProjectDir)SDL2-2.0.9\lib\x86;$(ProjectDir)SDL2_ttf-2.0.14\lib\x86;$(ProjectDir)SDL2_mixer-2.0.4\lib\x86;$(ProjectDir)SDL2_image-2.0.4\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)glew-2.1.0\include;$(ProjectDir)SDL2-2.0.9\include;$(ProjectDir)SDL2_ttf-2.0.14\include;$(ProjectDir)SDL2_mixer-2.0.4\include;$(ProjectDir);$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)glew-2.1.0\lib\Release\Win32;$(ProjectDir)SDL2-2.0.9\lib\x86;$(ProjectDir)SDL2_ttf-2.0.14\lib\x86;$(ProjectDir)SDL2_mixer-2.0.4\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -105,7 +107,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glew32.lib;opengl32.lib;SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;ws2_32.lib;Shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glew32.lib;opengl32.lib;SDL2.lib;SDL2main.lib;SDL2_ttf.lib;SDL2_mixer.lib;ws2_32.lib;Shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
     </Link>
     <PostBuildEvent>
@@ -119,10 +121,7 @@ xcopy /y /d "$(ProjectDir)SDL2_mixer-2.0.4\lib\x86\libvorbisfile-3.dll" "$(OutDi
 xcopy /y /d "$(ProjectDir)SDL2_mixer-2.0.4\lib\x86\LICENSE.ogg-vorbis.txt" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)SDL2_ttf-2.0.14\lib\x86\SDL2_ttf.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)SDL2_ttf-2.0.14\lib\x86\libfreetype-6.dll" "$(OutDir)"
-xcopy /y /d "$(ProjectDir)SDL2_ttf-2.0.14\lib\x86\LICENSE.freetype.txt" "$(OutDir)"
-xcopy /y /d "$(ProjectDir)SDL2_image-2.0.4\lib\x86\SDL2_image.dll" "$(OutDir)"
-xcopy /y /d "$(ProjectDir)SDL2_image-2.0.4\lib\x86\zlib1.dll" "$(OutDir)"
-xcopy /y /d "$(ProjectDir)SDL2_image-2.0.4\lib\x86\LICENSE.zlib.txt" "$(OutDir)"</Command>
+xcopy /y /d "$(ProjectDir)SDL2_ttf-2.0.14\lib\x86\LICENSE.freetype.txt" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -139,7 +138,7 @@ xcopy /y /d "$(ProjectDir)SDL2_image-2.0.4\lib\x86\LICENSE.zlib.txt" "$(OutDir)"
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>glew32.lib;opengl32.lib;SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;ws2_32.lib;Shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glew32.lib;opengl32.lib;SDL2.lib;SDL2main.lib;SDL2_ttf.lib;SDL2_mixer.lib;ws2_32.lib;Shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
     </Link>
     <PostBuildEvent>
@@ -153,10 +152,7 @@ xcopy /y /d "$(ProjectDir)SDL2_mixer-2.0.4\lib\x86\libvorbisfile-3.dll" "$(OutDi
 xcopy /y /d "$(ProjectDir)SDL2_mixer-2.0.4\lib\x86\LICENSE.ogg-vorbis.txt" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)SDL2_ttf-2.0.14\lib\x86\SDL2_ttf.dll" "$(OutDir)"
 xcopy /y /d "$(ProjectDir)SDL2_ttf-2.0.14\lib\x86\libfreetype-6.dll" "$(OutDir)"
-xcopy /y /d "$(ProjectDir)SDL2_ttf-2.0.14\lib\x86\LICENSE.freetype.txt" "$(OutDir)"
-xcopy /y /d "$(ProjectDir)SDL2_image-2.0.4\lib\x86\SDL2_image.dll" "$(OutDir)"
-xcopy /y /d "$(ProjectDir)SDL2_image-2.0.4\lib\x86\zlib1.dll" "$(OutDir)"
-xcopy /y /d "$(ProjectDir)SDL2_image-2.0.4\lib\x86\LICENSE.zlib.txt" "$(OutDir)"</Command>
+xcopy /y /d "$(ProjectDir)SDL2_ttf-2.0.14\lib\x86\LICENSE.freetype.txt" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
