--- a/win/SkyCheckers.vcxproj.filters
+++ b/win/SkyCheckers.vcxproj.filters
@@ -78,6 +78,12 @@
     <ClInclude Include="..\src\renderer_projection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\renderer_d3d11.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\renderer_types.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\ai.c">
@@ -135,6 +141,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\src\renderer_projection.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\renderer_d3d11.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
