--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ mac/SkyCheckers.xcodeproj/project.xcworkspace/xcuserdata
 skycheckers
 win/Debug
 win/Release
+win/x64/Debug
+win/x64/Release
 win/dinput.pdb
 *.sdf
 *.suo
