--- a/mac/Info.plist
+++ b/mac/Info.plist
@@ -26,5 +26,7 @@
 	<string>1.1</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSMainNibFile</key>
+	<string>MainMenu</string>
 </dict>
 </plist>
