--- a/win/SkyCheckers.vcxproj
+++ b/win/SkyCheckers.vcxproj
@@ -21,50 +21,69 @@
   <ItemGroup>
     <ClInclude Include="..\src\ai.h" />
     <ClInclude Include="..\src\animation.h" />
+    <ClInclude Include="..\src\app.h" />
     <ClInclude Include="..\src\audio.h" />
     <ClInclude Include="..\src\characters.h" />
     <ClInclude Include="..\src\collision.h" />
     <ClInclude Include="..\src\console.h" />
+    <ClInclude Include="..\src\defaults.h" />
+    <ClInclude Include="..\src\float.h" />
     <ClInclude Include="..\src\font.h" />
+    <ClInclude Include="..\src\gamepad.h" />
     <ClInclude Include="..\src\game_menus.h" />
+    <ClInclude Include="..\src\globals.h" />
     <ClInclude Include="..\src\input.h" />
-    <ClInclude Include="..\src\maincore.h" />
+    <ClInclude Include="..\src\keyboard.h" />
     <ClInclude Include="..\src\math_3d.h" />
     <ClInclude Include="..\src\menu.h" />
+    <ClInclude Include="..\src\metal_indices.h" />
     <ClInclude Include="..\src\network.h" />
+    <ClInclude Include="..\src\platforms.h" />
+    <ClInclude Include="..\src\quit.h" />
     <ClInclude Include="..\src\renderer.h" />
     <ClInclude Include="..\src\renderer_d3d11.h" />
     <ClInclude Include="..\src\renderer_gl.h" />
     <ClInclude Include="..\src\renderer_projection.h" />
     <ClInclude Include="..\src\renderer_types.h" />
     <ClInclude Include="..\src\scenery.h" />
-    <ClInclude Include="..\src\utilities.h" />
+    <ClInclude Include="..\src\sdl_include.h" />
+    <ClInclude Include="..\src\text.h" />
+    <ClInclude Include="..\src\texture.h" />
+    <ClInclude Include="..\src\thread.h" />
+    <ClInclude Include="..\src\time.h" />
     <ClInclude Include="..\src\weapon.h" />
-    <ClInclude Include="..\src\windows.h" />
+    <ClInclude Include="..\src\window.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\ai.c" />
     <ClCompile Include="..\src\animation.c" />
+    <ClCompile Include="..\src\app_sdl.c" />
     <ClCompile Include="..\src\audio_sdl.c" />
     <ClCompile Include="..\src\characters.c" />
     <ClCompile Include="..\src\collision.c" />
     <ClCompile Include="..\src\console.c" />
+    <ClCompile Include="..\src\defaults_win.c" />
     <ClCompile Include="..\src\font_sdl.c" />
+    <ClCompile Include="..\src\gamepad_sdl.c" />
     <ClCompile Include="..\src\game_menus.c" />
     <ClCompile Include="..\src\input.c" />
+    <ClCompile Include="..\src\keyboard_sdl.c" />
     <ClCompile Include="..\src\main.c" />
     <ClCompile Include="..\src\menu.c" />
+    <ClCompile Include="..\src\mt_random.c" />
     <ClCompile Include="..\src\network.c" />
+    <ClCompile Include="..\src\quit_sdl.c" />
     <ClCompile Include="..\src\renderer.c" />
     <ClCompile Include="..\src\renderer_d3d11.cpp" />
-    <ClCompile Include="..\src\renderer_gl.c" />
     <ClCompile Include="..\src\renderer_projection.c" />
     <ClCompile Include="..\src\scenery.c" />
     <ClCompile Include="..\src\text.c" />
-    <ClCompile Include="..\src\utilities.c" />
+    <ClCompile Include="..\src\texture_sdl.c" />
+    <ClCompile Include="..\src\thread_sdl.c" />
+    <ClCompile Include="..\src\time_sdl.c" />
     <ClCompile Include="..\src\weapon.c" />
-    <ClCompile Include="..\src\windows.c" />
+    <ClCompile Include="..\src\window_sdl.c" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SkyCheckers.rc" />
