Update windows project

--- a/win/SkyCheckers.vcxproj
+++ b/win/SkyCheckers.vcxproj
@@ -30,12 +30,12 @@
     <ClInclude Include="..\src\float.h" />
     <ClInclude Include="..\src\font.h" />
     <ClInclude Include="..\src\gamepad.h" />
-    <ClInclude Include="..\src\game_menus.h" />
     <ClInclude Include="..\src\globals.h" />
     <ClInclude Include="..\src\input.h" />
     <ClInclude Include="..\src\keyboard.h" />
     <ClInclude Include="..\src\math_3d.h" />
-    <ClInclude Include="..\src\menu.h" />
+    <ClInclude Include="..\src\menus.h" />
+    <ClInclude Include="..\src\menu_actions.h" />
     <ClInclude Include="..\src\metal_indices.h" />
     <ClInclude Include="..\src\network.h" />
     <ClInclude Include="..\src\platforms.h" />
@@ -66,11 +66,11 @@
     <ClCompile Include="..\src\defaults_win.c" />
     <ClCompile Include="..\src\font_sdl.c" />
     <ClCompile Include="..\src\gamepad_sdl.c" />
-    <ClCompile Include="..\src\game_menus.c" />
     <ClCompile Include="..\src\input.c" />
     <ClCompile Include="..\src\keyboard_sdl.c" />
     <ClCompile Include="..\src\main.c" />
-    <ClCompile Include="..\src\menu.c" />
+    <ClCompile Include="..\src\menus_desktop.c" />
+    <ClCompile Include="..\src\menu_actions.c" />
     <ClCompile Include="..\src\mt_random.c" />
     <ClCompile Include="..\src\network.c" />
     <ClCompile Include="..\src\quit_sdl.c" />
