--- a/win/SkyCheckers.vcxproj
+++ b/win/SkyCheckers.vcxproj
@@ -79,6 +79,7 @@
     <ClCompile Include="..\src\renderer_projection.c" />
     <ClCompile Include="..\src\scenery.c" />
     <ClCompile Include="..\src\text.c" />
+    <ClCompile Include="..\src\texture.c" />
     <ClCompile Include="..\src\texture_sdl.c" />
     <ClCompile Include="..\src\thread_sdl.c" />
     <ClCompile Include="..\src\time_sdl.c" />
