Fix issues with snapcraft file
I need to remove the cruft that's not necessary, but at least it now works.

--- a/linux/snapcraft.yaml
+++ b/linux/snapcraft.yaml
@@ -10,27 +10,51 @@ confinement: devmode
 
 apps:
   skycheckers:
-    command: bin/skycheckers --base usr/share/skycheckers/
+    command: bin/skycheckers --base $SNAP/usr/share/skycheckers/
+    environment:
+      # https://forum.snapcraft.io/t/adding-opengl-gpu-support-to-a-snap/6273
+      LD_LIBRARY_PATH: $SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/:$SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/dri:$SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/mesa:$SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/mesa-gl:$SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/xorg
+      LIBGL_DRIVERS_PATH: $SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/dri
+    plugs:
+      - opengl
+      - audio-playback
+      - network
+      - network-bind
+      - joystick
+      - screen-inhibit-control
+      - wayland
+      - x11
+      - desktop
+      - desktop-legacy
 
 parts:
   skycheckers:
-    after: [sdl2]
+    after: [desktop-glib-only]
     source: https://github.com/zorgiepoo/Sky-Checkers.git
     source-subdir: linux
     plugin: make
     build-packages:
+      - libsdl2-dev
       - libsdl2-mixer-dev
       - libsdl2-ttf-dev
       - libglew-dev
     stage-packages:
+      - libsdl2-2.0-0
       - libsdl2-mixer-2.0-0
       - libsdl2-ttf-2.0-0
       - libglew2.0
-  
-  sdl2:
-    source: https://www.libsdl.org/release/SDL2-2.0.12.tar.gz
-    plugin: autotools
-    build-packages:
-      - libx11-dev
+      - libglu1-mesa
+      - libgl1-mesa-glx
+      - libgl1-mesa-dri
 
+  # https://forum.snapcraft.io/t/adding-opengl-gpu-support-to-a-snap/6273
+  # https://github.com/ubuntu/snapcraft-desktop-helpers/blob/master/snapcraft.yaml
+  desktop-glib-only:
+    source: https://github.com/ubuntu/snapcraft-desktop-helpers.git
+    source-subdir: glib-only
+    plugin: make
+    build-packages:
+      - libglib2.0-dev
+    stage-packages:
+      - libglib2.0-bin
 
