--- a/linux/snapcraft.yaml
+++ b/linux/snapcraft.yaml
@@ -5,12 +5,13 @@ summary: Blast enemies off a stage
 description: |
   Blast off your enemies in a 1-4 multiplayer action packed battle and be the last one standing!
 
-grade: devel
-confinement: devmode
+grade: stable
+confinement: strict
 
 apps:
   skycheckers:
     command: bin/skycheckers --base $SNAP/usr/share/skycheckers/
+    desktop: usr/share/applications/com.zgcoder.skycheckers.desktop
     environment:
       # https://forum.snapcraft.io/t/adding-opengl-gpu-support-to-a-snap/6273
       LD_LIBRARY_PATH: $SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/:$SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/dri:$SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/mesa:$SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/mesa-gl:$SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/xorg
